--- a/index.html
+++ b/index.html
@@ -243,38 +243,7 @@ Our Clients</a>
 	<!-- End Main Header -->
 	
 	<!-- About Sidebar -->
-	<div class="about-sidebar">
-		<div class="gradient-layer"></div>
-		<!-- Close Button -->
-		<div class="close-sidebar-widget close-button">
-			<span class="fa-solid fa-xmark fa-fw"></span>
-		</div>
-		<div class="sidebar-inner">
-			<div class="upper-box">
-				<div class="image">
-					<img src="assets/images/resource/about-1.jpg" alt="">
-				</div>
-				<div class="content-box">
-					<h3>About <span>Constrc</span></h3>
-					<div class="text">our clients, oue employees, and our community through our commitmrnt to leadership, excellence in craft, and attention to detail.</div>
-					<ul class="about-sidebar_list">
-						<li>Testimonials</li>
-						<li>Outsourcing</li>
-						<li>Privacy Policy</li>
-						<li>HR Training</li>
-						<li>Careers</li>
-					</ul>
-				</div>
-			</div>
-			<!-- Social Box -->
-			<div class="social-box">
-				<a href="https://facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-				<a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
-				<a href="https://youtube.com/"><i class="fa-brands fa-youtube"></i></a>
-				<a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-			</div>
-		</div>
-	</div>
+
 	<!-- End About Sidebar -->
 
 	<!-- Slider One -->
@@ -282,7 +251,7 @@ Our Clients</a>
 
   <!-- Indicators -->
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="0" class="active"></button>
+    <!-- <button type="button" data-bs-target="#mainSlider" data-bs-slide-to="0" class="active"></button> -->
   
   </div>
 
@@ -297,13 +266,13 @@ Our Clients</a>
   </div>
 
   <!-- Controls -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#mainSlider" data-bs-slide="prev">
+  <!-- <button class="carousel-control-prev" type="button" data-bs-target="#mainSlider" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
 
   <button class="carousel-control-next" type="button" data-bs-target="#mainSlider" data-bs-slide="next">
     <span class="carousel-control-next-icon"></span>
-  </button>
+  </button> -->
 
 </div>
 
@@ -561,7 +530,7 @@ Our Clients</a>
 				<div class="project-block-four">
 					<div class="inner-box">
 						<div class="image-box">
-							<figure class="image"><a href=""><img src="https://thumbs.dreamstime.com/b/operator-inspection-automotive-part-micrometer-high-precision-55817329.jpg" alt="Image"></a></figure>
+							<figure class="image"><a href=""><img src="https://images.stockcake.com/public/e/6/e/e6eb93ee-2570-4004-873f-cb87627b4491_large/industrial-pressure-gauge-stockcake.jpg" alt="Image"></a></figure>
 						</div>
 						<div class="content-box">
 							<!-- <span class="float-text">Builder</span> -->
